Change path to packages Add tex packages

--- a/Itseez_seminar/Randomness_concepts/RandomAndPseudorandom.tex
+++ b/Itseez_seminar/Randomness_concepts/RandomAndPseudorandom.tex
@@ -2,7 +2,7 @@
 \usepackage{color}
 \usepackage[T2A]{fontenc}
 \usepackage{colordvi}
-\usepackage{../MyPackages/commands}
+\usepackage{../../MyPackages/commands}
 \usepackage[absolute,overlay]{textpos}
 \usepackage{setspace}
 
