--- a/MyPackages/commands.sty
+++ b/MyPackages/commands.sty
@@ -1,6 +1,6 @@
 \ProvidesPackage{commands}
 \usepackage[T2A]{fontenc}
-\usepackage[russian,english]{babel}   
+\usepackage[russian]{babel}   
 %\usepackage{commath} % for multline for example
 %Для использования различных шрифтов в формулах
 \usepackage{amsfonts}
