Change flow ordering

--- a/ScienceWork/MatModel.tex
+++ b/ScienceWork/MatModel.tex
@@ -34,20 +34,19 @@
 \section{Постановка задачи и построение математической модели}
 
 \subsection{Постановка задачи на содержательном уровне}
+
 Рассмотрим систему массового обслуживания следующего вида (Рис.~\ref{SystemScheme}).
-
-
 \begin{figure}[h]
 \includegraphics[scale=0.5]{SystemScheme.png} 
 \caption{Структурная схема системы обслуживания}
 \label{SystemScheme}
 \end{figure}
 
-Пусть в систему с одним обслуживающим устройством поступают потоки $\Pi_1$, $\Pi_2$, $\Pi_3$  и $\Pi_4$. Требования по потоку $\Pi_j$ становятся в соответствующую очередь $O_j$ неограниченной вместимостью, $j\in \brrr{1, 2, 3, 4}$. Для $j \in \brrr{1, 2, 3}$ дисциплина очереди $O_j$, поддерживаемая устройством $\delta_j$, имеет тип FIFO (First In First Out). Таким образом, для обслуживания из соответствующей очереди выбирается то требование, которое пришло раньше. Дисциплина очереди $O_4$ будет описана ниже. Входные потоки $\Pi_1$ и $\Pi_2$ формируются внешней средой, которая, будем предполагать, имеет только одно состояние, то есть вероятностная структура потоков не меняется с течением времени. Требования потоков $\Pi_1$ и $\Pi_3$ формируют независимые между собой неординарные пуассоновские потоки, то есть  стационарные, без последействия и ординарные потоки групп требований. Интенсивности соответствующих простейших потоков для $\Pi_1$ и $\Pi_3$ будем обозначать $\la_1$ и $\la_3$, а распределение числа заявок в группе по потоку $\Pi_j$ будем описывать производящей функцией
+Пусть в систему с одним обслуживающим устройством поступают потоки $\Pi_1$, $\Pi_2$, $\Pi_3$  и $\Pi_4$. Требования по потоку $\Pi_j$ становятся в соответствующую очередь $O_j$ неограниченной вместимостью, $j\in \brrr{1, 2, 3, 4}$. Для $j \in \brrr{1, 2, 3}$ дисциплина очереди $O_j$, поддерживаемая устройством $\delta_j$, имеет тип FIFO (First In First Out). Таким образом, для обслуживания из соответствующей очереди выбирается то требование, которое пришло раньше. Дисциплина очереди $O_4$ будет описана ниже. Входные потоки $\Pi_1$ и $\Pi_3$ формируются внешней средой, которая, будем предполагать, имеет только одно состояние, то есть вероятностная структура потоков не меняется с течением времени. Требования потоков $\Pi_1$ и $\Pi_3$ формируют независимые между собой неординарные пуассоновские потоки, то есть  стационарные, без последействия и ординарные потоки групп требований. Интенсивности соответствующих простейших потоков для $\Pi_1$ и $\Pi_3$ будем обозначать $\la_1$ и $\la_3$, а распределение числа заявок в группе по потоку $\Pi_j$ будем описывать производящей функцией
 \begin{equation}
 f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}
 \end{equation}
- для $|z|<(1+\varepsilon), \varepsilon > 0$ и $p_{\nu}^{(j)}>0$. Величина $p_{\nu}^{(j)}$ определяет вероятность того, что по потоку $\Pi_j$ число требований в группе равно $\nu$, $j\in \brrr{1,3}$. Обслуженные требования потока $\Pi_1$ поступают на повторное обслуживание, формируя при этом поток $\Pi_4$ (т.е. $\Pi_1^{\mathrm{\text{вых}}} =  \Pi_4$). Далее, каждое требование из очереди $O_4$ с вероятностью $p_r$ и независимо от других завершает обслуживание и отправляется в очередь $O_2$ потока $\Pi_2$, где $r$~ --- номер состояния обслуживающего устройства на соответствующем такте обслуживания ($\Pi_4^{\mathrm{\text{вых}}}=\Pi_2$). С вероятностью $1-p_r$ требование очереди $O_4$ остается в ней до следующего такта. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными, что означает запрет на одновременное обслуживание требований этих потоков и, следовательно, исследование системы не может быть сведено к задаче с меньшим числом потоков. 
+ для $|z|<(1+\varepsilon), \varepsilon > 0$ и $p_{\nu}^{(j)}>0$. Величина $p_{\nu}^{(j)}$ определяет вероятность того, что по потоку $\Pi_j$ число требований в группе равно $\nu$, $j\in \brrr{1,3}$. Обслуженные требования потока $\Pi_1$ поступают на повторное обслуживание, формируя при этом поток $\Pi_4$ (т.е. $\Pi_1^{\mathrm{\text{вых}}} =  \Pi_4$). Далее, каждое требование из очереди $O_4$ с вероятностью $p_r$ и независимо от других завершает обслуживание и отправляется в очередь $O_2$ потока $\Pi_2$, где $r$~ ---~ номер состояния обслуживающего устройства на соответствующем такте обслуживания ($\Pi_4^{\mathrm{\text{вых}}}=\Pi_2$). С вероятностью $1-p_r$ требование очереди $O_4$ остается в ней до следующего такта. Потоки $\Pi_2$ и $\Pi_3$ являются конфликтными, что означает запрет на одновременное обслуживание требований этих потоков и, следовательно, исследование системы не может быть сведено к задаче с меньшим числом потоков. 
  
  В каждый момент времени обслуживающее устройство находится в одном из конечного множества состояний $\Gamma=\brrr{\Gr{1}, \Gr{2}, \ldots, \Gr{n}}$. В каждом состоянии $\ga{r}$ обслуживающее устройство находится в течение времени $\Tt{r}$. Множество $\G$ представим в виде суммы четырех непересекающихся подмножеств: $\G = \G^{\mathrm{\Rmnum{1}}} + \G^{\mathrm{\Rmnum{2}}} + \G^{\mathrm{\Rmnum{3}}} + \G^{\mathrm{\Rmnum{4}}}$, --- которые определим ниже.
 
@@ -65,32 +64,32 @@ f_j(z) = \sum_{\nu=1}^{\infty} p_{\nu}^{(j)} z ^{\nu}
 ^2\G=\G^{\mathrm{\Rmnum{1}}} \bigcup \G^{\mathrm{\Rmnum{2}}}, \quad
 ^3\G=\G^{\mathrm{\Rmnum{3}}} \bigcup \G^{\mathrm{\Rmnum{4}}}.
 \end{equation}
-Тогда поток насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j\in \brrr{1,2,3}$, будет содержать неслучайное число $\ell_{r,j}$ требований, обслуженных в течение времени $\Tt{r}$, если $\ga{r} \in~ ^j\G$, и будет содержать $0$ требований в противном случае: $\ga{r} \notin ~ ^j\G$, $j\in \brrr{1,2,3}$. При условии, что в очереди $O_4$ находится $x \in Z_+$ требований, поток насыщения $\Pi^{\mathrm{\text{нас}}}_4$ определим как поток, содержащий все $x$ требований.
+Тогда поток насыщения $\Pi^{\mathrm{\text{нас}}}_j$, $j\in \brrr{1,2,3}$, будет содержать неслучайное число $\ell_{r,j}$ требований, обслуженных в течение времени $\Tt{r}$, если $\ga{r} \in~^j\G$, и будет содержать $0$ требований в противном случае: $\ga{r} \notin ~^j\G$. При условии, что в очереди $O_4$ находится $x \in Z_+$ требований, поток насыщения $\Pi^{\mathrm{\text{нас}}}_4$ определим как поток, содержащий все $x$ требований.
 
 Для исследования системы обслуживания в данной работе будет использоваться так называемый кибернетический подход. В соответствии с этим подходом наблюдение за системой осуществляется в дискретные моменты времени $\tau_0 = 0,~ \tau_1,~ \ldots$,~  совпадающие с моментами переключения состояния обслуживающего устройства. 
-Будем считать, что функция перехода из состояния $\G_i$ в момент $\tau_i$ в состояние $\G_{i+1}$ в момент $\tau_{i+1}$ известна и задается функцией $\G_{i+1} = h(\G_i,x_i)$ от предыдущего состояния $\G_i$ и величины $x_i$ очереди $O_3$ в момент $\tau_i$. Таким образом, обслуживающее устройство, в зависимости от объема очереди $O_3$, может переходить в разные состояния. Общая структура рассматриваемых графов переходов между состояниями будет описана ниже.
+Будем считать, что функция перехода из состояния $\G_i$ в момент $\tau_i$ в состояние $\G_{i+1}$ в момент $\tau_{i+1}$ известна и задается функцией $h(\G_i,x_i)$ от предыдущего состояния $\G_i$ и величины $x_i$ очереди $O_3$ в момент $\tau_i$. Таким образом, обслуживающее устройство, в зависимости от объема очереди $O_3$, может переходить в разные состояния, что влечет за собой особый класс рассматриваемых графов переходов. Более подробно кибернетический подход будет описан в последующих разделах работы. Общая структура рассматриваемых графов переходов между состояниями также будет описана ниже. 
 
 \subsection{Свойства условных распределений}
 
-Все рассматриваемые в этой работе случайные элементы определяются на общем вероятностном пространстве $\br{\Omega, {\cal F}, P}$ элементарных исходов $\omega \in \Omega$ с вероятностной мерой $P(A)$, $A \in {\cal F}$ на $\sigma$-алгебре ${\cal F}$. Положим моменты наблюдения за системой 
+Все рассматриваемые в этой работе случайные элементы определяются на общем вероятностном пространстве $\br{\Omega, {\cal F}, P}$ элементарных исходов $\omega \in \Omega$ с вероятностной мерой $P(A)$, $A \in {\cal F}$, на $\sigma$-алгебре ${\cal F}$. 
 
 Введем следующие случайные величины и элементы, $j \in \brrr{1,2,3,4}$:
 \begin{itemize}
 \item количество $\vk_{j,i} \in Z_+ $ требований в очереди $O_j$ в момент времени $\tau_i$;
-\item состояние обслуживающего устройства $\G_i\in \G = \brrr{\G^{(1)},\G^{(2)}, \ldots, \G^{(n)}}$ в течение $\left(\tau_{i-1};\tau_i\right]$;
-\item количество $\eta_{j,i}$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение $\left(\tau_{i};\tau_{i+1}\right]$;
-\item количество $\xi_{j,i}$ требований по потоку насыщения $\Pi^{\mathrm{sat}}_j$ в течение $\left(\tau_{i};\tau_{i+1}\right]$;
-\item количество $\overline{\xi}_{j,i}$ реально обслуженных требований по потоку $\Pi_j$.
+\item состояние обслуживающего устройства $\G_i\in \G = \brrr{\G^{(1)},\G^{(2)}, \ldots, \G^{(n)}}$ в течение времени $\left(\tau_{i-1};\tau_i\right]$;
+\item количество $\eta_{j,i}$ требований, поступивших в очередь $O_j$ по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$;
+\item количество $\xi_{j,i}$ требований по потоку насыщения $\Pi^{\mathrm{sat}}_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$;
+\item количество $\overline{\xi}_{j,i}$ реально обслуженных требований по потоку $\Pi_j$ в течение времени $\left(\tau_{i};\tau_{i+1}\right]$.
 \end{itemize}
 
-Тогда для $j \in \brrr{1,2,3,4}$ имеем
+Тогда для $j \in \brrr{1,2,3}$ имеем
 \begin{equation}
 \G_{i+1}=h(\G_i,\vk_{3,i}),\quad \vk_{j,i+1}=\max{\brrr{0,\vk_{j,i}+\eta_{j,i}-\xi_{j,i}}}, \quad \overline{\xi}_{j,i} = \min{\brrr{\xi_{j,i},\vk_{j,i}+\eta_{j,i}}}
 \label{deterministicLawOne}
 \end{equation}
 и 
 \begin{equation}
-\eta_{2,i} = \overline{\xi}_{4,i}, \quad \eta_{4,i}=\overline{\xi}_{1,i}.
+\eta_{2,i} = \overline{\xi}_{4,i}, \quad \eta_{4,i}=\overline{\xi}_{1,i}, \quad \vk_{4,i+1}=\vk_{4,i} + \overline{\xi}_{1,i} - \overline{\xi}_{4,i}
  \label{deterministicLawTwo}
 \end{equation}
 Также для определения длительности $T_{i}$ состояния обслуживающего устройства в течение $\left(\tau_{i-1};\tau_i\right]$, удобно ввести функцию $h_T(\cdot,\cdot)$:
@@ -101,11 +100,11 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=h(\G_i,\vk_{
 
 Обозначим через $\vp_j(x,t)$, $j\in \brrr{1,3}$, условную вероятность того, что за время $t>0$ по потоку $\Pi_j$ поступит ровно $b\in Z_+$ требований:
 \begin{equation}
-\P{\brrr{\omega\colon \eta_{j,i} = b}}{\brrr{\omega\colon \G_i=\ga{r}, \vk_{3,i}=x}}=\vp_j(b,h_T (\ga{r}, x)).
+\P{ \eta_{j,i} = b}{\G_i=\ga{r}, \vk_{3,i}=x}=\vp_j(b,h_T (\ga{r}, x)).
 \end{equation}
 Учитывая закон распределения процесса Пуассона и количества требований в пачках, величины $\vp_j(x,t)$ могут быть найдены из соотношений
 \begin{equation}
-\sum_{x=0}^{\infty} z^x\vp_j(x,t) = exp\brrr{\la_j t \br{\sum_{b=1}^{\infty} z^b \pi(b,j) -1}}.
+\sum_{x=0}^{\infty} z^x\vp_j(x,t) = \exp\brrr{\la_j t \br{\sum_{b=1}^{\infty} z^b \pi(b,j) -1}}.
 \end{equation}
 
 Для потоков насыщения имеем следующие соотношения:
@@ -119,7 +118,7 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=h(\G_i,\vk_{
 \begin{equation}
 \psi\br{k,x,u} = C_x^k u^k (1-u)^{x-k}.
 \end{equation}
-Поскольку требования из очереди $O_4$ независимо друг от друга с вероятностью $p_r$ на выходе системы (т.е. в результате обслуживания) поступают в очередь $O_2$, то количество требований в выходном потоке $\Pi_4^{\mathrm{out}}$ определяется по биномиальному закону распределения:
+Поскольку требования из очереди $O_4$ независимо друг от друга с вероятностью $p_r$ на выходе системы поступают в очередь $O_2$, то количество требований в выходном потоке $\Pi_4^{\mathrm{\text{вых}}}$ определяется по биномиальному закону распределения:
 \begin{equation}
 \P{\overline{\xi}_{4,i} = b}{ \G_i = \ga{r}, \vk_{4,i}=x, \vk_{3,i}=\tilde{x}}=\psi\br{b,x,p_{r'}}, \quad \G_{i+1}=\ga{r'}, \quad 0 \leqslant b \leqslant x.
 \end{equation}
@@ -128,21 +127,33 @@ T_{i+1}=h_T(\G_i,\vk_{3,i})= \Tt{r'},\quad  \text{ где } \ga{r'}=h(\G_i,\vk_{
 Введем следующие события:
 \begin{align}
 A_i\br{r;x_1;x_2;x_3;x_4} &= \brrr{\G_i=\ga{r},\vk_{3,i}=x_3}\bigcap \brrr{\vk_{1,i}=x_1,\vk_{2,i}=x_2,\vk_{4,i}=x_4}\\
-B_i\br{b_1;b_2;b_3;y_1;y_2;y_3} &= \brrr{\eta_{1,i}=b_1,\eta_{2,i}=b_2,\eta_{3,i}=b_3,\xi_{1,i}=y_1,\xi_{2,i}=y_2,\xi_{3,i}=y_3}
+B_i\br{b_1;b_3;y_1;y_2;y_3;y_4} &= \brrr{\eta_{1,i}=b_1,\eta_{3,i}=b_3} \bigcap \brrr{\xi_{1,i}=y_1,\xi_{2,i}=y_2,\xi_{3,i}=y_3,\overline{\xi}_{4,i}=y_4}
 \end{align}
 
-В соответствии с описанной структурой системы, количество требований пришедших по потокам $\Pi_1$, $\Pi_2$, $\Pi_3$, $\Pi_4$, $\Pi_1^{\mathrm{\text{нас}}}$, $\Pi_2^{\mathrm{\text{нас}}}$ и $\Pi_3^{\mathrm{\text{нас}}}$ за $(i+1)$-ый такт зависит лишь от состояния обслуживающего устройства и размера очереди $O_3$ в момент $\tau_i$. Поэтому условные распределения рассматриваемых в системе потоков, учитывая все <<прошлое>> системы можно расписать следующим образом:
+В соответствии с описанной структурой системы, количество требований пришедших по потокам $\Pi_1$, $\Pi_3$, $\Pi_1^{\mathrm{\text{нас}}}$,  $\Pi_2^{\mathrm{\text{нас}}}$, $\Pi_3^{\mathrm{\text{нас}}}$ и $\Pi_4^{\mathrm{\text{вых}}}$ за $(i+1)$-ый такт зависит только от состояния обслуживающего устройства и размера очередей в момент $\tau_i$. Поэтому условные распределения рассматриваемых в системе потоков, учитывая все <<прошлое>> системы удовлетворяют соотношениям
+\ml
+{
+\P{B_i\br{b_1;b_2;y_1;y_2;y_3;y_4}}{\bigcap_{t=0}^{i} A_t\br{r_t;x_{1,t};x_{2,t};x_{3,t};x_{4,t}}} = \\
+\P{B_i\br{b_1;b_2;y_1;y_2;y_3;y_4}}{A_i\br{r_i;x_{1,i};x_{2,i};x_{3,i};x_{4,i}}}
+%= \P{\eta_{1,i}=b_1, \eta_{2,i}=b_2,\eta_{3,i}=b_3, \xi_{1,i}=y_1, \xi_{2,i}=y_2, \xi_{3,i}=y_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}}=\\
+%= \P{\eta_{1,i}=b_1}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times
+%\P{\eta_{2,i}=b_2}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times \\
+%\P{\eta_{3,i}=b_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times 
+%\P{\xi_{1,i}=y_1}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times \\
+%\P{\xi_{2,i}=y_2}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times 
+%\P{\xi_{3,i}=y_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}}
+}
+Далее, в силу того, что потоки насыщения $\Pi_1^{\mathrm{\text{нас}}}$,  $\Pi_2^{\mathrm{\text{нас}}}$, $\Pi_3^{\mathrm{\text{нас}}}$, входные потоки $\Pi_1$, $\Pi_3$, а также поток насыщения $\Pi_1^{\mathrm{\text{нас}}}$ условно независимы между собой, верно следующее соотношение:
 \ml
 {
 \label{etaXiIndependence}
-\P{B_i\br{b_1;b_2;b_3;y_1;y_2;y_3}}{\bigcap_{t=0}^{i} A_t\br{r_t;x_{1,t};x_{2,t};x_{3,t};x_{4,t}}} = \\
-= \P{\eta_{1,i}=b_1, \eta_{2,i}=b_2,\eta_{3,i}=b_3, \xi_{1,i}=y_1, \xi_{2,i}=y_2, \xi_{3,i}=y_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}}=\\
-= \P{\eta_{1,i}=b_1}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times
-\P{\eta_{2,i}=b_2}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times \\
-\P{\eta_{3,i}=b_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times 
-\P{\xi_{1,i}=y_1}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times \\
-\P{\xi_{2,i}=y_2}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times 
-\P{\xi_{3,i}=y_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}}
+\P{B_i\br{b_1;b_2;y_1;y_2;y_3;y_4}}{\bigcap_{t=0}^{i} A_t\br{r_t;x_{1,t};x_{2,t};x_{3,t};x_{4,t}}} = \\
+= \P{\eta_{1,i}=b_1}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times 
+\P{\eta_{3,i}=b_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times \\
+\P{\xi_{1,i}=y_1}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times 
+\P{\xi_{2,i}=y_2}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times \\
+\P{\xi_{3,i}=y_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i}} \times
+\P{\overline{\xi}_{4,i}=y_3}{\G_i=\ga{r_i},\vk_{3,i}=x_{3,i},\vk_{4,i} = x_{4,i}}
 }
 
 Сформулируем и докажем теорему о марковости последовательности $\Mark$:
